# bazel-ijar-bug

./: .bazelrc  .buckconfig  .gitignore  README.md  WORKSPACE  bazel-ijar-bug
ijar-test/: BUCK  BUILD.bazel  Problem.scala
